06-eks-istio-argocd-starbucks/istio/envoyfilter-localratelimit.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: orders-rate-limit
  namespace: prod
spec:
  workloadSelector:
    labels: { app: api }
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.local_ratelimit
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          stat_prefix: http_local_rate_limiter
          token_bucket:
            max_tokens: 100
            tokens_per_fill: 100
            fill_interval: 1s
          filter_enabled:
            runtime_key: local_rate_limit_enabled
            default_value: { numerator: 100, denominator: HUNDRED }
          descriptors:
          - entries:
            - key: path
              value: "/orders"
            token_bucket:
              max_tokens: 20
              tokens_per_fill: 20
              fill_interval: 1s
